--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start":"node backend/server.js",
-    "install": "cd ./frontend && npm install"
+    "install": "cd ./frontend && npm i -f"
   },
   "author": "",
   "license": "ISC",
